[gd_scene load_steps=10 format=2]

[ext_resource path="res://chat/chat_text_label.gd" type="Script" id=1]
[ext_resource path="res://fonts/res/chat_italic.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/res/chat_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/res/chat_regular.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/res/chat_bold_italic.tres" type="DynamicFont" id=5]
[ext_resource path="res://icons/minimize_icon.svg" type="Texture" id=6]
[ext_resource path="res://chat/chat_window.gd" type="Script" id=7]
[ext_resource path="res://icons/chat_icon.svg" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ChatWindow" type="VBoxContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -350.0
margin_right = 450.0
margin_bottom = -50.0
grow_vertical = 0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
script = ExtResource( 7 )

[node name="ChatPanel" type="Panel" parent="."]
margin_right = 400.0
margin_bottom = 266.0
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="ChatPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="ChatTextLabel" type="RichTextLabel" parent="ChatPanel/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 400.0
margin_bottom = 264.0
focus_mode = 2
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
scroll_following = true
selection_enabled = true
script = ExtResource( 1 )

[node name="MinimizeButton" type="Button" parent="ChatPanel"]
margin_top = -32.0
rect_min_size = Vector2( 32, 32 )
icon = ExtResource( 6 )
expand_icon = true

[node name="ChatLineEdit" type="LineEdit" parent="."]
margin_top = 270.0
margin_right = 400.0
margin_bottom = 300.0
max_length = 1000
placeholder_text = "Type a message hereâ€¦"

[node name="MaximizeButton" type="Button" parent="."]
visible = false
margin_top = 236.0
margin_right = 64.0
margin_bottom = 300.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 10
icon = ExtResource( 8 )
expand_icon = true

[connection signal="pressed" from="ChatPanel/MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="pressed" from="MaximizeButton" to="." method="_on_MaximizeButton_pressed"]
